# istok

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md  agents.md  foo.py  graph.py  plot.py  pyproject.toml
ecs/: CMakeLists.txt  ecs.hpp
ecs/ecs/: binding.hpp  component.hpp  datastruct.hpp  ecs.hpp  entity.hpp  manager.hpp  system.hpp
ecs/test/: CMakeLists.txt  component_unittest.cpp  ecs_unittest.cpp  entity_unittest.cpp  system_unittest.cpp  test_utils.cpp  test_utils.hpp
ecs2/: CMakeLists.txt
ecs2/include/: ecs.hpp
ecs2/include/ecs/: component.hpp  entity.hpp
ecs2/include/internal/: component.hpp  entity.hpp
ecs2/include/istok/: ecs.hpp
ecs2/src/: component_unittest.cpp  ecs_unittest.cpp  entity_unittest.cpp
ecs2/test/: ecs_unittest.cpp
gui/: CMakeLists.txt  gui.hpp  window.hpp
gui/gui/: core.hpp  dispatcher.hpp  visitor.hpp  widget.hpp  window.hpp
gui/gui/common/: core.hpp  message.hpp  platform.hpp
gui/gui/core/: core.hpp  dispatcher.hpp  launcher.hpp  master.hpp  message.hpp  messages.hpp  screen.hpp  tools.hpp  tree.hpp  widget.hpp
gui/gui/gl/: base.hpp  buffer.hpp  shader.hpp  texture.hpp  vertex2d.hpp
gui/gui/platform/: definitions.hpp  winapi.hpp
gui/gui/winapi/: basic.hpp  gl.hpp  platform.hpp  wgl.hpp  winapi.hpp  window.cpp  window.hpp
gui/include/istok/: gui.hpp
gui/include/istok/gui/: base.hpp
gui/src/: gui.cpp
gui/src/winapi/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  dispatcher_setup.cpp  dispatcher_setup.hpp  events.cpp  message.cpp  message_loop.cpp  real_winapi.cpp  real_winapi.hpp  setup.cpp  setup.hpp  test_utils.cpp  test_utils.hpp  window.hpp  window_close.cpp  window_close.hpp  window_life.cpp  window_life.hpp  window_size.cpp  window_size.hpp  windowproc.cpp
gui/src/winapi/base/: CMakeLists.txt  delegate.hpp  dispatcher.cpp  dispatcher.hpp  dispatcher2.cpp  dispatcher2.hpp  dispatcher2_unittest.cpp  dispatcher_unittest.cpp  environment.cpp  environment.hpp  environment2.cpp  environment2.hpp  environment2_unittest.cpp  environment_unittest.cpp  fake_windows.cpp  fake_windows.hpp  message.hpp  message_loop.cpp  message_loop.hpp  message_loop_unittest.cpp  null_winapi.hpp  null_winapi_delegate.hpp  test_utils.cpp  test_utils.hpp  tools.cpp  tools.hpp  tools_unittest.cpp  winapi_proxy.hpp  window.cpp  window.hpp  window2.cpp  window2.hpp  window2_unittest.cpp  window_test_utils.hpp  window_unittest.cpp  windowproc.cpp
gui/src/winapi/core/: CMakeLists.txt  message_loop.cpp  message_loop.hpp  message_loop_unittest.cpp  messages.cpp  messages_unittest.cpp  setup.cpp  setup.hpp  window_life.cpp  window_life_unittest.cpp
gui/src/winapi/core2/: dispatcher.cpp  dispatcher.hpp  dispatcher_unittest.cpp  window.cpp  window.hpp  window_unittest.cpp
gui/src/winapi/core2/base/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  dispatcher_unittest.cpp  message.cpp  message.hpp  window.cpp  window.hpp  window_unittest.cpp
gui/src/winapi/systems/: CMakeLists.txt  window_close.cpp  window_close_unittest.cpp  window_life.cpp  window_life_unittest.cpp  window_size.cpp  window_size.hpp  window_size_unittest.cpp  window_visibility.cpp  window_visibility.hpp  window_visibility_unittest.cpp
gui/src/winapi/units/: CMakeLists.txt  messages.cpp  messages_unittest.cpp  window_close.cpp  window_close.hpp  window_close_unittest.cpp  window_life_unittest.cpp  window_size.cpp  window_size.hpp  window_size_unittest.cpp  window_visibility.cpp  window_visibility.hpp  window_visibility_unittest.cpp
gui/test/: CMakeLists.txt
gui/test/winapi/: CMakeLists.txt  dispatcher_unittest.cpp  events_unittest.cpp  message_loop_unittest.cpp  utils.hpp  window_close_unittest.cpp  window_life_unittest.cpp  window_size_unittest.cpp  window_unittest.cpp  windowproc_unittest.cpp
gui2/: CMakeLists.txt
gui2/include/istok/: gui.hpp
gui2/include/istok/gui/: base.hpp  callback_types.hpp  geometry.hpp
gui2/include/istok/gui/winapi/: delegate.hpp
gui2/src/winapi/: CMakeLists.txt  delegate.hpp  dispatcher.cpp  dispatcher.hpp  events.cpp  events.hpp  message.hpp  message_loop.cpp  message_loop.hpp  real_winapi.cpp  real_winapi.hpp  setup.cpp  window.cpp  window.hpp  windowproc.cpp  windowproc.hpp
gui2/test/: CMakeLists.txt  gui_unittest.cpp  mock_api.hpp
gui2/test/winapi/: CMakeLists.txt  dispatcher_unittest.cpp  events_unittest.cpp  message_loop_unittest.cpp  mock_delegate.hpp  utils.hpp  window_unittest.cpp  windowproc_unittest.cpp
istok/: __about__.py  impurity.py  tensor.py
istok/solver/: __init__.py  base.py  block.py  calculator.py  graph.py  wrapper.py
legacy/: AGENTS.md
logging/: CMakeLists.txt  logging.cpp  logging.hpp
logging/include/istok/: logging.hpp
logging/src/: logging.cpp
logging/test/: logging_unittest.cpp
playground/: CMakeLists.txt  demo.cpp  ecs1st.cpp  ecsbased.cpp  experiment.cpp  second.cpp  upgrade.cpp
test/: CMakeLists.txt
test/acceptance/: CMakeLists.txt
test/acceptance/gui/: dialog.cpp  focus.cpp  main.cpp  msgbox.cpp
test/e2e/: CMakeLists.txt
test/e2e/gui/: _active_windows.cpp  _hover.cpp  _msgbox.cpp  _screen.cpp  focus.cpp  new_stories.md  screen.cpp
test/e2e/gui/new_stories/: developer.md  user.md
test/e2e/gui/stories/: developer.md  user.md
test/unit/: CMakeLists.txt
test/unit/ecs/: helper.hpp  test_binding.cpp  test_component.cpp  test_datastruct.cpp  test_ecs.cpp  test_entity.cpp  test_manager.cpp  test_system.cpp
test/unit/gui/: test_core.cpp  test_dispatcher.cpp  test_launcher.cpp  test_messages.cpp  test_platform_winapi.cpp  test_screen.cpp  test_tree.cpp  test_visitor.cpp  test_widget.cpp  test_winapi.cpp  test_window.cpp
test/unit/logging/: test_logging.cpp
test/unit/tools/: test_exchange.cpp  test_helpers.cpp  test_queue.cpp  test_threads.cpp
tests/: __init__.py  test_impurity.py  test_tensor.py  test_tools.py
tests/test_solver/: base_test.py  test_block.py  test_calculator.py  test_graph.py  test_wrapper.py
tools/: CMakeLists.txt  tools.hpp
tools/tools/: exchange.hpp  helpers.hpp  queue.hpp  threads.hpp
winapi/: CMakeLists.txt
(+30 files in other folders)
