file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "ecs/test_*.cpp")
foreach(SRC ${TEST_SOURCES})
    get_filename_component(FILE_NAME ${SRC} NAME_WE)
    set(NAME ecs_unit_${FILE_NAME})
    add_executable(${NAME} ${SRC})
    target_link_libraries(${NAME} PRIVATE ecs Catch2::Catch2WithMain)
    add_test(NAME ${NAME} COMMAND ${NAME})
endforeach()

file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "gui/test_*.cpp")
foreach(SRC ${TEST_SOURCES})
    get_filename_component(FILE_NAME ${SRC} NAME_WE)
    set(NAME gui_unit_${FILE_NAME})
    add_executable(${NAME} ${SRC})
    target_link_libraries(${NAME} PRIVATE gui Catch2::Catch2WithMain)
    add_test(NAME ${NAME} COMMAND ${NAME})
endforeach()
